# nfl-4th-down-win-probability

./: Makefile  README.md  load_nfl_to_azure.py  nfl_4th_down.README.md  nfl_4th_down_streamlit_app_v3.py  nfl_4th_down_streamlit_app_v3.py.save  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: mkdocs.yml
docs/docs/: index.md
interactive_dashboards/: nfl_4th_down_streamlit_app_v3.py
misc/: __init__.py  features.py  plots.py
models/: xgb_4th_down_decision_balanced.pkl  xgb_4th_down_metadata_balanced.pkl  xgb_decision_4th_down.pkl
nfl_4th_down_win_probability/: dataset.py
nfl_4th_down_win_probability/interactive_dashboards/: nfl_4th_down_streamlit_app.py  nfl_4th_down_streamlit_app.py.save  nfl_4th_down_streamlit_app_v2.py  nfl_4th_down_streamlit_app_v3.py
nfl_4th_down_win_probability/modeling/: predict.py  train.py
notebooks/cleaning_eda/: nfl_fourth_down_cleaning.ipynb
notebooks/feature_engineering/: nfl_fourth_down_engineering.ipynb  nfl_fourth_down_engineering2.ipynb
notebooks/modeling/: nfl_4th_down_modeling.ipynb
