[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nfl_4th_down_win_probability"
version = "0.0.1"
description = "Estimate win probability in different game situations and recommend whether a team should go for it, kick a field goal, or punt on 4th down."
authors = [
  { name = "Will Escalante" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.9"


[tool.ruff]
line-length = 99
src = ["nfl_4th_down_win_probability"]
include = ["pyproject.toml", "nfl_4th_down_win_probability/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nfl_4th_down_win_probability"]
force-sort-within-sections = true

